tests/code_samples/valid/redundent.t
(S0, 1):  (1 R S1)
(S0, 0):  (1 R hault) 

(S1, 0):  (1 S S0)
(S1, 1):  (1 S S0)

(S2, 0):  (1 S S0)
(S2, 1):  (1 S S0)