tests/code_samples/invalid/halt.t
halt, 1  : 1 R  halt
halt, 0  : 1 R  halt